@@ -22,7 +22,6 @@ import sirius.kernel.commons.Files;
 import sirius.kernel.commons.Streams;
 import sirius.kernel.commons.Strings;
 import sirius.kernel.commons.Tuple;
-import sirius.kernel.commons.Value;
 import sirius.kernel.commons.Watch;
 import sirius.kernel.di.std.ConfigValue;
 import sirius.kernel.di.std.Part;
@@ -44,8 +43,10 @@ import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
-import java.net.SocketTimeoutException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
+import java.net.http.HttpResponse;
+import java.net.http.HttpTimeoutException;
 import java.nio.charset.StandardCharsets;
 import java.time.Duration;
 import java.time.Instant;
@@ -77,7 +78,6 @@ public abstract class VirtualFile extends Composable implements Comparable<Virtu
 
     private static final String HANDLER_OUTPUT_STREAM_SUPPLIER = "outputStreamSupplier";
     private static final String HANDLER_CONSUME_FILE_HANDLER = "consumeFileHandler";
-    private static final int TEN_SECONDS = (int) Duration.ofSeconds(10).toMillis();
 
     protected String name;
     protected String description;
@@ -1254,7 +1254,7 @@ public abstract class VirtualFile extends Composable implements Comparable<Virtu
      * as no change was detected
      * @throws HandledException in case of any error while downloading the contents
      */
-    public boolean loadFromUrl(URL url, FetchFromUrlMode mode) {
+    public boolean loadFromUrl(URI url, FetchFromUrlMode mode) {
         Watch watch = Watch.start();
         if (performLoadFromUrl(url, mode)) {
             TaskContext.get().addTiming(NLS.get("VirtualFile.fileDownloaded"), watch.elapsedMillis());
@@ -1265,7 +1265,7 @@ public abstract class VirtualFile extends Composable implements Comparable<Virtu
         }
     }
 
-    private boolean performLoadFromUrl(URL url, FetchFromUrlMode mode) {
+    private boolean performLoadFromUrl(URI url, FetchFromUrlMode mode) {
         try {
             if (mode == FetchFromUrlMode.NEVER_FETCH) {
                 return false;
@@ -1292,25 +1292,25 @@ public abstract class VirtualFile extends Composable implements Comparable<Virtu
     }
 
     private boolean loadFromOutcall(Outcall outcall) throws IOException {
-        int responseCode = outcall.getResponseCode();
-        if (responseCode == HttpResponseStatus.NOT_MODIFIED.code()) {
+        HttpResponse<InputStream> response = outcall.getResponse();
+
+        if (response.statusCode() == HttpResponseStatus.NOT_MODIFIED.code()) {
             return false;
         }
-        if (responseCode >= 400) {
-            Streams.exhaust(outcall.getInput());
+
+        if (response.statusCode() >= 400) {
+            Streams.exhaust(response.body());
             throw new IOException(Strings.apply("The server responded with status %s (%s)!",
-                                                HttpResponseStatus.valueOf(responseCode).toString(),
-                                                responseCode));
+                                                HttpResponseStatus.valueOf(response.statusCode()).toString(),
+                                                response.statusCode()));
         }
 
-        try (InputStream in = outcall.getInput()) {
-            long length = Value.of(outcall.getHeaderField(HttpHeaderNames.CONTENT_LENGTH.toString())).asLong(-1);
-            if (length >= 0) {
-                consumeStream(in, length);
-            } else {
-                try (OutputStream out = createOutputStream()) {
-                    Streams.transfer(in, out);
-                }
+        long length = response.headers().firstValueAsLong(HttpHeaderNames.CONTENT_LENGTH.toString()).orElse(-1);
+        if (length >= 0) {
+            consumeStream(response.body(), length);
+        } else {
+            try (OutputStream out = createOutputStream()) {
+                Streams.transfer(response.body(), out);
             }
         }
 
@@ -1354,7 +1354,7 @@ public abstract class VirtualFile extends Composable implements Comparable<Virtu
      * @throws HandledException in case of an any error during the download (or if the effective file path cannot be
      *                          determined)
      */
-    public Tuple<VirtualFile, Boolean> resolveOrLoadChildFromURL(URL url,
+    public Tuple<VirtualFile, Boolean> resolveOrLoadChildFromURL(URI url,
                                                                  FetchFromUrlMode mode,
                                                                  Predicate<String> fileExtensionVerifier) {
         Watch watch = Watch.start();
@@ -1368,7 +1368,7 @@ public abstract class VirtualFile extends Composable implements Comparable<Virtu
         return fileAndFlag;
     }
 
-    private Tuple<VirtualFile, Boolean> performResolveOrLoadChildFromURL(URL url,
+    private Tuple<VirtualFile, Boolean> performResolveOrLoadChildFromURL(URI url,
                                                                          FetchFromUrlMode mode,
                                                                          Predicate<String> fileExtensionVerifier) {
         try {
@@ -1394,7 +1394,7 @@ public abstract class VirtualFile extends Composable implements Comparable<Virtu
         }
     }
 
-    private String parsePathFromUrl(URL url, Predicate<String> fileExtensionVerifier) {
+    private String parsePathFromUrl(URI url, Predicate<String> fileExtensionVerifier) {
         // If the URL has a querystring, we check every parameter and determine if there is one with a valid
         // filename. Otherwise, we use the filename as provided by the URL path itself...
         QueryStringDecoder queryStringDecoder = new QueryStringDecoder(url.toString(), StandardCharsets.UTF_8);
@@ -1412,27 +1412,20 @@ public abstract class VirtualFile extends Composable implements Comparable<Virtu
                                  });
     }
 
-    private Tuple<VirtualFile, Boolean> resolveViaHeadRequest(URL url,
+    private Tuple<VirtualFile, Boolean> resolveViaHeadRequest(URI url,
                                                               FetchFromUrlMode mode,
                                                               Predicate<String> fileExtensionVerifier)
             throws IOException {
         try {
             Outcall headRequest = new Outcall(url);
             headRequest.markAsHeadRequest();
-
-            // We use quite a short timeout here, as if this HEAD request fails, we re-attempt a GET request
-            // with "better" timeouts anyway. Otherwise, slow servers which also don't accept HEAD requests can
-            // drastically slow down this process.
-            headRequest.setConnectTimeout(TEN_SECONDS);
-            headRequest.setReadTimeout(TEN_SECONDS);
+            headRequest.modifyClient().connectTimeout(Duration.ofSeconds(10));
 
             String path = headRequest.parseFileNameFromContentDisposition()
                                      .filter(filename -> fileExtensionVerifier.test(Files.getFileExtension(filename)))
                                      .orElse(null);
-            // Drain any (unexpected) content...
-            Streams.exhaust(headRequest.getInput());
 
-            URL lastConnectedURL = headRequest.getLastConnectedURL();
+            URI lastConnectedURL = headRequest.getResponse().request().uri();
 
             if (Strings.isEmpty(path) && !url.getPath().equals(lastConnectedURL.getPath())) {
                 // We don't have a path yet but we followed redirects so we check the new URL
@@ -1442,7 +1435,7 @@ public abstract class VirtualFile extends Composable implements Comparable<Virtu
                     // We followed a redirect header in UTF-8 that was interpreted as ISO-8859-1, indicated by 'Ã' in the url
                     // as the starting byte of two byte characters in UTF-8 will always be interpreted as 'Ã' in ISO-8859-1
                     lastConnectedURL =
-                            new URL(new String(lastConnectedURL.toString().getBytes(StandardCharsets.ISO_8859_1),
+                            new URI(new String(lastConnectedURL.toString().getBytes(StandardCharsets.ISO_8859_1),
                                                StandardCharsets.UTF_8));
                 }
                 path = parsePathFromUrl(lastConnectedURL, fileExtensionVerifier);
@@ -1462,10 +1455,10 @@ public abstract class VirtualFile extends Composable implements Comparable<Virtu
                 }
             }
 
-            if (!shouldRetryWithGet(headRequest)) {
+            if (!shouldRetryWithGet(headRequest.getResponse())) {
                 throw createInvalidPathError(url);
             }
-        } catch (SocketTimeoutException ex) {
+        } catch (HttpTimeoutException | URISyntaxException ex) {
             Exceptions.ignore(ex);
         }
 
@@ -1473,36 +1466,40 @@ public abstract class VirtualFile extends Composable implements Comparable<Virtu
         return resolveViaGetRequest(url, mode);
     }
 
-    private HandledException createInvalidPathError(URL url) {
+    private HandledException createInvalidPathError(URI url) {
         return Exceptions.createHandled()
                          .withNLSKey("VirtualFile.loadFromUrl.noValidPath")
                          .hint(ProcessLog.HINT_MESSAGE_KEY, "$VirtualFile.loadFromUrlFailed")
                          .hint(ProcessLog.HINT_MESSAGE_COUNT, ProcessLog.MESSAGE_TYPE_COUNT_MEDIUM)
-                         .set("url", url)
+                         .set("url", url.toString())
                          .handle();
     }
 
-    private boolean shouldRetryWithGet(Outcall headRequest) throws IOException {
-        if (headRequest.getResponseCode() == HttpResponseStatus.METHOD_NOT_ALLOWED.code()
-            && Value.of(headRequest.getHeaderField(HttpHeaderNames.ALLOW.toString()))
-                    .toUpperCase()
-                    .contains(HttpMethod.GET.name())) {
+    private boolean shouldRetryWithGet(HttpResponse<?> response) {
+        if (response.statusCode() == HttpResponseStatus.METHOD_NOT_ALLOWED.code() && allowsGet(response)) {
             // server disallows head request and indicates GET is allowed
             return true;
         }
 
         // some servers will improperly respond with 503 or 501 if HEAD requests are not allowed
         // - we want to retry anyway
-        return headRequest.getResponseCode() == HttpResponseStatus.NOT_IMPLEMENTED.code()
-               || headRequest.getResponseCode() == HttpResponseStatus.SERVICE_UNAVAILABLE.code();
+        return response.statusCode() == HttpResponseStatus.NOT_IMPLEMENTED.code()
+               || response.statusCode() == HttpResponseStatus.SERVICE_UNAVAILABLE.code();
     }
 
-    private Tuple<VirtualFile, Boolean> resolveViaGetRequest(URL url, FetchFromUrlMode mode) throws IOException {
+    private boolean allowsGet(HttpResponse<?> response) {
+        return response.headers()
+                       .firstValue(HttpHeaderNames.ALLOW.toString())
+                       .filter(header -> header.toUpperCase().contains(HttpMethod.GET.name()))
+                       .isPresent();
+    }
+
+    private Tuple<VirtualFile, Boolean> resolveViaGetRequest(URI url, FetchFromUrlMode mode) throws IOException {
         Outcall request = new Outcall(url);
         String path = request.parseFileNameFromContentDisposition().orElse(null);
         if (Strings.isEmpty(path)) {
             // Drain any content, the server sent, as we have no way of processing it...
-            Streams.exhaust(request.getInput());
+            Streams.exhaust(request.getResponse().body());
             throw createInvalidPathError(url);
         }
 
@@ -1510,7 +1507,7 @@ public abstract class VirtualFile extends Composable implements Comparable<Virtu
         if (exists() && mode == FetchFromUrlMode.NON_EXISTENT) {
             // Drain any content, as the mode dictates not to update the file (which might require another upload,
             // so discarding the data is faster).
-            Streams.exhaust(request.getInput());
+            Streams.exhaust(request.getResponse().body());
             return Tuple.create(file, false);
         }
 
@@ -1525,7 +1522,7 @@ public abstract class VirtualFile extends Composable implements Comparable<Virtu
         } else {
             // Drain any content, as the mode dictates not to update the file (which might require another upload,
             // so discarding the data is faster).
-            Streams.exhaust(request.getInput());
+            Streams.exhaust(request.getResponse().body());
             return Tuple.create(file, false);
         }
     }
